gcc/testsuite/g++.dg/expr/ptrmem5.C
// PR c++/15696

struct A {};

typedef void (A::*ftype)();

void foo() { A().*ftype(); } // { dg-error "" }
